[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-offchain'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0'

compatibility_version = "2.0.0"

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = '1.3.4' }
parking_lot = "0.10.0"
alt_serde = { version = "=1.0.104", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.44", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }

# Substrate packages

frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false }
sp-core = { version = '2.0.0', default-features = false }
sp-io = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }
chrono = { version = '0.4.19', default-features = false }
rustc-hex = { version="2.1.0", default-features = false }
bs58 = { version = "0.4.0", default-features = false }
pallet-balances = { version = "2.0.0", default_features = false }

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
	'rustc-hex/std',
	'bs58/std',
]
